# libminicli

./: .gitignore  LICENSE  Makefile.am  README.org  TODO.org  configure.ac  libminicli.pc.in
.github/workflows/: build.yml
include/: Makefile.am  minicli.h
man/: minicli.3
po/: ChangeLog  Makevars  POTFILES.in  fr.po  minicli.pot
src/: Makefile.am  cli.c  init.c  minicli.3  program.c
